<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="415dp"
        android:layout_height="347dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle_4"
        tools:ignore="ContentDescription,HardcodedText,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="164dp"
        android:layout_height="175dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@drawable/group_3_2"
        tools:ignore="ContentDescription,HardcodedText" />

    <EditText
        android:id="@+id/Password_login"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654"
        tools:ignore="LabelFor,MissingConstraints,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.611"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/esqueceu_a_senha"
        android:textColor="#FA4A0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="251dp"
        android:layout_height="55dp"
        android:backgroundTint="#FA4A0C"
        android:text="@string/entrar_cadastrp"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/Email_login"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/endere_o_de_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_register_login"
        android:layout_width="251dp"
        android:layout_height="55dp"
        android:backgroundTint="#FA4A0C"
        android:text="@string/registre_se"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/box_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.74"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>